# preserve

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py
.github/workflows/: push.yml
preserve/: __init__.py  cache.py  cli.py  connector.py  preserve.py  skeleton.py  utils.py
preserve/connectors/: __init__.py  memory.py  mongo.py  shelf.py  sqlite.py
tests/: conftest.py  test_cache.py  test_connectors.py  test_multi_connectors.py  test_preserve.py
