[project]
name = "preserve"
version = "2.0.0"
description = "A simple key/value store with multiple backends."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Grégoire Burel", email = "evhart@users.noreply.github.com" },
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Topic :: Database",
  "Topic :: Database :: Database Engines/Servers",
  "Topic :: Utilities",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Operating System :: OS Independent",
]
dependencies = [
  "pydantic>=2.0.0,<3.0.0",
  "eval-type-backport>=0.2.0; python_version < '3.10'",
  "python-dotenv>=1.2.1",
  "usingversion>=0.1.2,<0.2.0",
]

[project.optional-dependencies]
cli = [
  "halo>=0.0.30,<0.0.32",
  "tabulate>=0.8.7,<0.11.0",
  "typer>=0.4.0,<1.0.0",
]
mongodb = ["pymongo>=4.5.0,<5.0.0"]
all = [
  "preserve[cli]",
  "preserve[mongodb]",
]

[project.urls]
Homepage = "https://github.com/evhart/preserve/"
Repository = "https://github.com/evhart/preserve/"

[project.scripts]
preserve = "preserve.cli:app"

[project.entry-points."preserve.connectors"]
memory = "preserve.connectors.memory:Memory"
shelf = "preserve.connectors.shelf:Shelf"
sqlite = "preserve.connectors.sqlite:SQLite"
mongodb = "preserve.connectors.mongo:Mongo"

[project.entry-points."preserve.multi_connectors"]
memory = "preserve.connectors.memory:MultiMemory"
shelf = "preserve.connectors.shelf:MultiShelf"
sqlite = "preserve.connectors.sqlite:MultiSQLite"
mongodb = "preserve.connectors.mongo:MultiMongo"

[dependency-groups]
dev = [
  "python-semantic-release>=10.0.0,<11.0.0",
  "build>=1.0.0",
  "pytest>=8.0.0,<9.0.0",
  "pytest-cov>=5.0.0,<7.0.0",
  "ruff>=0.7.0,<1.0.0",
  "pre-commit>=4.0.1,<5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "pip install build && python -m build"
commit_author = "github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>"
commit_parser = "conventional"

[tool.semantic_release.branches.main]
match = "master"
prerelease = false

[tool.semantic_release.commit_parser_options]
allowed_tags = [
  "build",
  "chore",
  "ci",
  "docs",
  "feat",
  "fix",
  "perf",
  "style",
  "refactor",
  "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "N",  # PEP8 naming convetions
  "D",  # pydocstyle
]
ignore = [
  "C901", # too complex
  "W191", # indentation contains tabs
  "D401", # imperative mood
  "D107", # TODO remove docstring warning.
  "D104", # TODO remove docstring warning.
  "D103", # TODO remove docstring warning.
  "D102", # TODO remove docstring warning.
  "D101", # TODO remove docstring warning.
  "D100", # TODO remove docstring warning.
  "D105", # TODO remove docstring warning.
]
